--- a/site/index.html
+++ b/site/index.html
@@ -3,7 +3,11 @@
 	<head>
 		<title>Hello world</title>
 	</head>
-	<body>
-		Test
+	<body style = "text-align: center">
+		<h1 style="color: green; font-size: 60px; text-align: center">Test that it works</h1>
+		<p>this is some other text
+		<p>and this too
+		<p><button onclick="alert('no more clicks')">Test</button>
+		<footer>this page www...........</footer>
 	</body>
 </html>
